--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "dependencies": {
     "@types/d3": "^5.0.0",
     "bootstrap": "4.1.3",
+    "bootstrap-datepicker": "^1.8.0",
     "d3": "^5.7.0",
     "electron-log": "^2.2.17",
     "electron-updater": "^3.1.2",
     "jquery": "^3.3.1",
+    "jsonschema": "^1.2.4",
+    "mssql": "^4.2.1",
     "popper.js": "^1.14.4",
     "simplemde": "^1.11.2",
     "vue": "^2.5.17",
