--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "@types/d3": "^5.0.0",
     "bootstrap": "4.1.3",
     "bootstrap-datepicker": "^1.8.0",
     "d3": "^5.7.0",
@@ -24,6 +23,8 @@
     "mssql": "^4.2.1",
     "popper.js": "^1.14.4",
     "simplemde": "^1.11.2",
+    "stats-analysis": "^2.0.0",
+    "unzipper": "^0.9.4",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
@@ -32,7 +33,10 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.0",
+    "@types/d3": "^5.0.0",
     "@types/mocha": "^5.2.4",
+    "@types/mssql": "^4.0.10",
+    "@types/node": "^10.11.6",
     "@vue/cli-plugin-babel": "^3.0.4",
     "@vue/cli-plugin-typescript": "^3.0.4",
     "@vue/cli-plugin-unit-mocha": "^3.0.4",
