--- a/src/configuration/dataSourceConfig.json
+++ b/src/configuration/dataSourceConfig.json
@@ -12,7 +12,7 @@
     {
       "name": "DoubleNumber",
       "isStoredProcedure": false,
-      "sqlString": "select {1}*2 as passedValue",
+      "query": "select {1}*2 as passedValue",
       "sqlParameters": [
         {
           "label": "Number to double",
@@ -35,7 +35,7 @@
     {
       "name": "Triple and Double",
       "isStoredProcedure": false,
-      "sqlString": "select {1}*3 as passedValue; select {2}*2 as passedValue",
+      "query": "select {1}*3 as passedValue; select {2}*2 as passedValue",
       "sqlParameters": [
         {
           "label": "Number to triple",
@@ -75,7 +75,7 @@
     {
       "name": "BrokerLiquidity",
       "isStoredProcedure": true,
-      "sqlString": "marketing2..broker_liquidity",
+      "query": "marketing2..broker_liquidity",
       "sqlParameters": [],
       "resultHandling": [
         {
@@ -93,7 +93,7 @@
       "name": "RiskPremium",
       "notes": "Provides DP, market spread and expected loss over time",
       "isStoredProcedure": false,
-      "sqlString": "select convert(VARCHAR(10),price_date,101) as date, dp1 as dp, spread as marketSpread, expected_loss as expectedLossSpread from macro..expected_loss order by price_date",
+      "query": "select convert(VARCHAR(10),price_date,101) as date, dp1 as dp, spread as marketSpread, expected_loss as expectedLossSpread from macro..expected_loss order by price_date",
       "sqlParameters": [],
       "resultHandling": [
         {
@@ -114,7 +114,7 @@
     {
       "name": "TestUserName",
       "isStoredProcedure": false,
-      "sqlString": "select * from user_admin..user_login; select * from user_admin..user_login where user_id < {1} and ldap_user_name like '%{2}%'",
+      "query": "select * from user_admin..user_login; select * from user_admin..user_login where user_id < {1} and ldap_user_name like '%{2}%'",
       "sqlParameters": [
         {
           "label": "user Id number less than:",
