initial version of pop-up for data table

--- a/src/configuration/dataSourceConfig.json
+++ b/src/configuration/dataSourceConfig.json
@@ -69,7 +69,7 @@
           "qa": {
             "scripts": [
               {"function": "findMedian", "parameters": ["passedValue"]},
-              {"function": "findMedian", "parameters": ["passedValue"]}
+              {"function": "findMax", "parameters": ["passedValue"]}
             ]
           }
         },
