improve Display File Viewer to show json and download CSV

--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "electron-log": "^2.2.17",
     "electron-updater": "^3.1.2",
     "jquery": "^3.3.1",
+    "json2csv": "^4.2.1",
     "jsonschema": "^1.2.4",
     "mssql": "^4.2.1",
     "popper.js": "^1.14.4",
     "simplemde": "^1.11.2",
+    "sql-formatter": "^2.3.1",
     "stats-analysis": "^2.0.0",
     "unzipper": "^0.9.4",
     "vue": "^2.5.17",
