--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "d3": "^5.7.0",
     "electron-log": "^2.2.17",
     "electron-updater": "^3.1.2",
+    "http": "^0.0.0",
     "jquery": "^3.3.1",
     "json2csv": "^4.2.1",
     "jsonschema": "^1.2.4",
     "mssql": "^4.2.1",
+    "needle": "^2.2.4",
     "popper.js": "^1.14.4",
     "simplemde": "^1.11.2",
     "sql-formatter": "^2.3.1",
